fixed spacing for mobile navbar

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,60 +1,61 @@
 .nav-container {
-	width: 100%;
+    width: 100%;
 
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .logo {
-	margin: 40px;
-	width: 50%;
+    margin: 40px;
+    width: 50%;
 }
 
 .nav {
-	padding: 40px;
-	display: flex;
-	flex-direction: row;
+    padding: 40px;
+    display: flex;
+    flex-direction: row;
 }
 
 .nav-item {
-	padding-inline: 1.5rem;
+    padding-inline: 1.5rem;
 }
 
 .hamburger {
-	display: none;
-	margin: 40px;
+    display: none;
+    margin: 40px;
 }
 
 @media screen and (max-width: 600px) {
-	.nav-container {
-	}
+    .nav-container {
+    }
 
-	.nav {
-		align-self: center;
-		top: 6rem;
-		left: -100%;
-		position: absolute;
-		text-align: center;
-		background-color: #f8f8f8;
-		width: 100%;
-		height: 100vh;
-		display: flex;
-		flex-direction: column;
-		transition: 0.4s;
-	}
+    .nav {
+        align-self: center;
+        top: 6rem;
+        left: -100%;
+        position: absolute;
+        text-align: center;
+        background-color: #f8f8f8;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        transition: 0.4s;
+    }
 
-	.nav.active {
-		left: 0px;
-	}
+    .nav.active {
+        left: 0px;
+    }
 
-	.nav-item {
-		font-size: 2rem;
-		padding: 1rem;
-	}
+    .nav-item {
+        font-size: 2rem;
+        padding: 1rem;
+    }
 
-	.hamburger {
-		display: inline-block;
-		font-size: 2rem;
-	}
+    .hamburger {
+        display: inline-block;
+        font-size: 2rem;
+    }
 }
